# mt3620-m4-samples

./: .gitmodules  LICENSE.txt  MAINTAINERS  README.md
ADC_Joystick_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  joystick.c  joystick.h  main.c
ADC_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
EINT_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
GPIO_ADC_RTAPP_MT3620_BareMetal/: .gitignore  CMakeLists.txt  README.md  app_manifest.json  main.c
GPT_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
I2C_OLED_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  README.md  SSD1306.c  SSD1306.h  app_manifest.json  image_1.h  image_2.h  main.c
I2C_RTApp_MT3620_AzureRTOS/: .gitignore  CMakeLists.txt  LSM6DS3.c  LSM6DS3.h  README.md  VectorTable.c  app_manifest.json  i2c_threadx.c  i2c_threadx.h  main.c
I2C_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  LSM6DS3.c  LSM6DS3.h  README.md  app_manifest.json  linker.ld  main.c
I2S_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  MAX98090.c  MAX98090.h  README.md  app_manifest.json  main.c  sin.h
IntercoreComms_Mailbox/: .gitignore  README.md
IntercoreComms_Mailbox/IntercoreComms_HighLevelApp/: CMakeLists.txt  LICENSE.txt  main_a7.c
IntercoreComms_Mailbox/IntercoreComms_RTApp_MT3620_BareMetal/: CMakeLists.txt  Socket.c  Socket.h  app_manifest.json  main.c
PWM_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  main.c
SPI_Low_RTApp_MT3620_BareMetal/: CMakeLists.txt  LSM6DS3.c  LSM6DS3.h  app_manifest.json  main.c
SPI_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  LSM6DS3.c  LSM6DS3.h  README.md  app_manifest.json  main.c
SPI_SDCard_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  SD.c  SD.h  app_manifest.json  main.c
SPI_SSD1331_RTApp_MT3620_BareMetal/: CMakeLists.txt  CMakeSettings.json  README.md  SSD1331.c  SSD1331.h  app_manifest.json  crayons.h  main.c  wheel.h
Super_Serious_Sample/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  linker.ld  main.c
Super_Serious_Sample/display/: SSD1306.c  SSD1306.h  SSD1331.c  SSD1331.h  color.h  display.c  display.h  primitive.c  primitive.h  vector.h
ThreadX_RTApp_MT3620_AzureRTOS/: CMakeLists.txt  README.md  VectorTable.c  app_manifest.json  demo_threadx.c  main.c  tx_initialize_low_level.S
UART_RTApp_MT3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  launch.vs.json  main.c
utils/: update_submodules.sh
